@@ -1659,4 +1659,5 @@ R   [uuk]: improved world serialization API
 [uuk]: fixed some minor stuff in the world generation serializer
 [uuk]: deleted reload stage system from mod loader (not the reload pipe, the old one)
 [uuk]: improved how block palette is stored and entity data is stored
+[uuk]: cleaned up some storage stuff
 
