@@ -64,6 +64,7 @@ changelog of snapshot <21w23a> released on <?> targeting <21w20a>
 
     Storage:
         - improved storage of block palette and entities
+        - improved general storage layout
 
 
 changelog of snapshot 21w20a released on 19.5.2021 targeting 21w19a
